make a fix in the stylesheet link

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Cormorant+Infant:700|Fjalla+One|Open+Sans" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
     <title>Arctic Wild</title>
   </head>
   <body>
@@ -87,7 +87,7 @@
             </div>
           </div>
         </div>
-        <div class="row">        
+        <div class="row">
           <div class="activity-tile small" id="canoe-trips">
             <div class="activity-icon">
               <div class="icon-back">
